[tool.poetry]
name = "neuspell"
version = "1.0.5"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
allennlp = "^2.9.0"
pytorch-pretrained-bert = "^0.6.2"
en-core-web-sm = {path = "data/en_core_web_sm-3.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
